# trashy_bot

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  config.template.toml  rustfmt.toml  sqlx-data.json
migrations/: 20210915125620_reminder.sql  V11__create_fav_blocks.sql  V1__create_favs.sql  V2__create_tags.sql  V3__create_banks.sql  V4__create_reaction_roles.sql  V5__create_server_configs.sql  V6__create_mutes.sql  V7__create_shinys.sql  V8__create_lastfms.sql
migrations/2019-03-01-110309_create_favs/: down.sql  up.sql
migrations/2019-03-01-135258_create_tags/: up.sql
migrations/2019-03-11-214000_bank/: down.sql  up.sql
migrations/2019-03-25-181907_create_reaction_roles/: down.sql  up.sql
migrations/2019-05-11-173013_create_twitch_config/: down.sql  up.sql
migrations/2019-05-11-174739_create_twitch_stream/: down.sql  up.sql
migrations/2019-05-13-182927_create_twitch_sub/: down.sql  up.sql
migrations/2019-07-30-175034_remove_old_twitch_stuff/: down.sql  up.sql
migrations/2019-07-30-180158_create_server_config/: down.sql  up.sql
migrations/2019-08-03-111900_create_mutes/: down.sql
migrations/2019-09-28-152902_create_shiny_tracker/: down.sql  up.sql
migrations/2019-10-05-080826_create_lastfm/: down.sql  up.sql
migrations_old/: V10__alter_reaction_roles.sql  V1__create_favs.sql  V2__create_tags.sql  V4__create_reaction_roles.sql  V9__create_reminder.sql
src/: blackjack.rs  commands.rs  config.rs  dispatch.rs  error.rs  handler.rs  lib.rs  lockdown.rs  logger.rs  main.rs  migrations.rs  models.rs  new_dispatch.rs  reaction_roles.rs  rules.rs  scheduler.rs  schema.rs  startup.rs  util.rs  web.rs
src/commands/: about.rs  account.rs  ban.rs  bank.rs  choose.rs  config.rs  copypasta.rs  emoji.rs  fav.rs  fighting.rs  group.rs  groups.rs  kick.rs  lastfm.rs  lockdown.rs  moderation.rs  optout.rs  owner.rs  poll.rs  quote.rs  reaction_roles.rs  remindme.rs  roll.rs  rules.rs  selfmute.rs  shiny.rs  spongebob.rs  testing.rs  twitch.rs  userinfo.rs  uwuify.rs  voice.rs  xkcd.rs
src/commands/account/: blackjack.rs  general.rs  slot.rs
src/handler/: blackjack.rs  fav.rs  reaction_roles.rs
src/interaction/: wait.rs
src/models/: bank.rs  fav.rs  fav_block.rs  favs.rs  lastfm.rs  mute.rs  reaction_role.rs  reminder.rs  server_config.rs  shiny.rs  tag.rs  tags.rs  twitch_config.rs  twitch_stream.rs  twitch_sub.rs  twitchuser.rs
