[package]
name = "trashy_bot"
version = "0.3.0"
authors = ["Denis Richartz <denisrichartz92@gmail.com>"]
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
chrono = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sqlx = { version = "0.5", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres", "chrono", "json" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
tracing-futures = "0.2"
toml = "0.5"
nom = "7"
twilight-cache-inmemory = "0.6"
twilight-gateway = "0.6"
twilight-http = "0.6"
twilight-model = "0.6"
thiserror = "1"
anyhow = "1"
# tantivy = "0.15"
# once_cell = "1.5"
# itertools = "0.10.0"